<resources>
    <string name="app_name" translatable="false">SeAMK Lukkari</string>
    <string name="developer_email_feedback">Feedback: juha.ala-rantala@seamk.fi</string>
    <string name="app_version" translatable="false">SeAMK Lukkari v0.5.8</string>
    <string name="error_no_restaurant_chosen">You haven\'t chosen a default restaurant. You can set one in the application settings.</string>
    <string name="error_connection_timeout_reason">This could be due to your slow connection or the servers are under heavy load.</string>
    <string name="error_connection_timeout_retry">Do you want to retry?</string>
    <string name="error_connection_timeout_sodexo">Failed to retrieve menu from Sodexo servers: connection timed out.</string>
    <string name="error_connection_timeout_peppi">Failed to retrieve timetable from Peppi servers: connection timed out.</string>
    <string name="error_connection_timeout_eventti">Failed to retrieve menu from Seinäjoki Areena servers: connection timed out.</string>
    <string name="error_eventti_source_code_changed">Eventti restaurant\'s sourceRealization code has changed. Again. The developer should be aware of this and currently working on a fix. You should check the Google Play Store if a update is available.</string>
    <string name="error_peppi_empty_study_basket">Your study basket is empty, so the timetable can\'t be retrieved. Please add your student group or create a timetable in the study basket tab.</string>
    <string name="error_peppi_authorization_failed">Huh. Retrieving the timetable failed due to authorization error. This means the developer needs to contact SeAMK.</string>
    <string name="error_connection_no_internet">Seems like you\'re not connected to the internet. Please check your internet connection.</string>
    <string name="try_again">Try again</string>
    <string name="timetable">Timetable</string>
    <string name="personal">Personal</string>
    <string name="reservation_details">Reservation details</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="summary">Summary</string>
    <string name="menu">Menu</string>
    <string name="feedback">Feedback</string>
    <string name="search">Search</string>
    <string name="find">Find</string>
    <string name="food">Food</string>
    <string name="extra">Extra</string>
    <string name="extra_features">Extra features</string>
    <string name="support">Support</string>
    <string name="settings">Settings</string>
    <string name="links">Links</string>
    <string name="share">Share</string>
    <string name="rate">Rate</string>
    <string name="subject">Subject</string>
    <string name="description">Description</string>
    <string name="realization_code">Realization code</string>
    <string name="realization_name">Realization name</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="room_code">Room code</string>
    <string name="room_name">Room name</string>
    <string name="building">Building</string>
    <string name="student_group">Student group</string>
    <string name="hide">Hide</string>
    <string name="show">Show</string>
    <string name="location">Location</string>
    <string name="ops">OPS</string>
    <string name="room_timetable">Room timetable</string>
    <string name="full_information">Full information</string>
    <string name="study_basket">Study basket</string>
    <string name="study_basket_search">Search and add</string>
    <string name="insert_search_term">Insert search term</string>
    <string name="type">Type</string>
    <string name="name">Name</string>
    <string name="code">Code</string>
    <string name="group">Group</string>
    <string name="search_settings">Search settings</string>
    <string name="choose">Choose</string>
    <string name="choose_app">Choose an application:</string>
    <string name="run_search">Run search</string>
    <string name="search_quick">Quick</string>
    <string name="search_basic">Basic</string>
    <string name="search_advanced">Advanced</string>
    <string name="intro_search_title">Multiple search possibilities</string>
    <string name="intro_search_desc">In the search-tab you can for example search for a empty room.</string>
    <string name="intro_basic_title">Timetable and menu</string>
    <string name="intro_basic_desc">With SeAMK Lukkari, you can quickly check the day\'s timetable and menu.</string>
    <string name="intro_basket_title">Powerful study basket</string>
    <string name="intro_basket_desc">With study basket you can create your own personal timetable.</string>
    <string name="setup_not_chosen">Not chosen</string>
    <string name="tutorial_study_basket_eight">The groups and realizations you have added are shown in your study basket. You can hide them from your timetable, or remove from study basket.</string>
    <string name="tutorial_study_basket_fifth">You can search for realizations with their codes.</string>
    <string name="tutorial_study_basket_first">This is a short general look on how the study basket works.</string>
    <string name="tutorial_study_basket_fourth">You can search for realizations with full or part of their name. Press "Add" to add the realization to your study basket.</string>
    <string name="tutorial_study_basket_ninth">If your group currently has realizations, the arrow on the right side of the hide-button will reveal them.</string>
    <string name="tutorial_study_basket_second">Start filling your study basket by pressing the add-button.</string>
    <string name="tutorial_study_basket_seventh">The arrow button next to the add button reveals all the current realizations for that group.</string>
    <string name="tutorial_study_basket_sixth">You can search for realizations and groups with group code. Press "add" to add the group to your study basket.</string>
    <string name="tutorial_study_basket_third">You can search for realizations with their name, code or group.</string>
    <string name="add">Add</string>
    <string name="added">Added</string>
    <string name="not_implemented">This has not yet been implemented.</string>
    <string name="download_app_message">Have you heard of this great application?</string>
    <string name="fill_required_fields">Please fill all the required fields.</string>
    <string name="thanks_for_feedback">Thank you for the feedback!</string>
    <string name="restore_reservations">Restore reservations</string>
    <string name="notification">Notification</string>
    <string name="cancel">Cancel</string>
    <string name="no_room_code">This reservation has no room code.</string>
    <string name="confirm_reservation_hide">Are you sure you want to hide this reservation?</string>
    <string name="help_hide_full_realization">If you want to hide the whole realization, you can do so in the study basket.</string>
    <string name="help_restore_reservation">You can restore hidden reservations from the settings.</string>
    <string name="choose_length">Choose length:</string>
    <string name="today_at_school">Today at school</string>
    <string name="restaurants">Restaurants</string>
    <string name="search_results">Search results</string>
    <string name="week">Week</string>
    <string name="rooms">Rooms</string>
    <string name="day">Day</string>
    <string name="find_empty_room">Find an empty room</string>
    <string name="timetable_search">Timetable search</string>
    <string name="information">Information</string>
    <string name="group_grid">Group grid</string>
    <string name="go_to_study_basket">Go to study basket</string>
    <string name="close">Close</string>
    <string name="question_go_to_study_basket">Do you want to go to study basket now?</string>
    <string name="study_basket_empty">Looks like your study basket is empty. The application fetches your timetable based on whats in your study basket.</string>
    <string name="please_wait_a_moment">Please wait a moment.</string>
    <string name="settings_summary_default_restaurant_title">Default restaurant in summary</string>
    <string name="settings_summary_default_restaurant_desc">Choose a default restaurant which is shown at the summary screen</string>
    <string name="settings_summary_quick_go_to_restaurant_title">Quick restaurant menu</string>
    <string name="settings_summary_quick_go_to_restaurant_desc">Enter the default restaurants full menu instead of showing all restaurants</string>
    <string name="agreement_title">SeAMK Lukkari</string>
    <string name="agreement_explanation">Some words before you start using the application. </string>
    <string name="agreement_first">• This application is not offered or supervised by SeAMK.</string>
    <string name="agreement_second">• SeAMK is not responsible for this application.</string>
    <string name="agreement_third">• The application is completely made as a free time project, and is not guaranteed to receive further updates.</string>
    <string name="agreement_fourth">• The application includes ads, which can be disabled in the settings.</string>
    <string name="teacher">Teacher</string>
    <string name="student">Student</string>
    <string name="first_time_setup_swipe_left">You can now swipe left to continue, or alternatively press save.</string>
    <string name="write_code_name">write code/name</string>
    <string name="first_time_setup_literal">First time setup</string>
    <string name="save">Save</string>
    <string name="forward_study_basket">Forward me to study basket</string>
    <string name="setup_summary">Summary</string>
    <string name="group_name">Group / name:</string>
    <string name="setup_change">Change</string>
    <string name="restaurant">Restaurant</string>
    <string name="setup_accept">Accept</string>
    <string name="setup_third_desc">If you\'re fine with the following settings, you can start using the application. All settings can be changed later, in the application\'s settings or in the study basket.</string>
    <string name="realization">Realization</string>
    <string name="write_search_word">Write search word</string>
    <string name="no_search_results">No search results.</string>
    <string name="study_basket_search_help">Search options:\n\nStudent: Student group code\nTeacher: Teacher name or code\nRealization: Realization name or code</string>
    <string name="show_scheduling_groups">Show scheduling groups</string>
    <string name="show_scheduling_groups_desc">Displays scheduling group in reservation, if there\'s one</string>
    <string name="use_alternativeLocation">Use alternative location</string>
    <string name="use_alternativeLocation_desc">Switches a reservation\'s location name to its code</string>
    <string name="show_adverts">Show Ads</string>
    <string name="show_adverts_desc">Support the developer by showing ads</string>
    <string name="general">General</string>
    <string name="settings_show_week_title">Show whole week</string>
    <string name="settings_show_week_desc">Shows the whole week in summary</string>
    <string name="settings_show_camera_title">Show queue quick button</string>
    <string name="settings_show_camera_desc">Adds a camera button to summary, if Frami F is default restaurant</string>
    <string name="winha">Winha</string>
</resources>