<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single"
        android:id="@+id/summary_menu">
        <item
            android:id="@+id/tiivistelma"
            android:icon="@drawable/ic_aloitus"
            android:title="@string/summary" />
    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/timetable_menu">
        <item
            android:id="@+id/timetable_view"
            android:icon="@drawable/ic_calendar"
            android:title="@string/timetable" />
        <item
            android:id="@+id/basket_view"
            android:icon="@drawable/ic_basket"
            android:title="@string/study_basket" />
        <item
            android:id="@+id/find_view"
            android:icon="@drawable/ic_search"
            android:title="@string/find" />
    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/winha_menu">
        <item
            android:id="@+id/winha_view"
            android:icon="@drawable/ic_assignment"
            android:title="@string/winha" />
    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/restaurant_menu">
        <item
            android:id="@+id/food_view"
            android:icon="@drawable/ic_food"
            android:title="@string/restaurants" />
    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/other_menu">
        <item
            android:id="@+id/more_view"
            android:icon="@drawable/ic_more"
            android:title="@string/extra_features" />
    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/settings_menu">
        <item
            android:id="@+id/settings_view"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
    </group>
</menu>
