<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.preference.PreferenceCategory
        android:title="@string/general">
        <androidx.preference.SwitchPreferenceCompat
            android:key="showWholeWeek"
            android:title="@string/settings_show_week_title"
            android:summary="@string/settings_show_week_desc"
            android:defaultValue="false"/>
        <androidx.preference.ListPreference
            android:key="restaurantCode"
            android:title="@string/settings_summary_default_restaurant_title"
            android:summary="@string/settings_summary_default_restaurant_desc"
            android:entries="@array/restaurantName"
            android:entryValues="@array/restaurantCode" />
        <androidx.preference.SwitchPreferenceCompat
            android:key="showCameraButton"
            android:title="@string/settings_show_camera_title"
            android:summary="@string/settings_show_camera_desc"
            android:defaultValue="false"/>
        <!--
        <android.support.v7.preference.SwitchPreferenceCompat
            android:key="quickShowRestaurant"
            android:title="@string/settings_summary_quick_go_to_restaurant_title"
            android:summary="@string/settings_summary_quick_go_to_restaurant_desc"
            android:defaultValue="false"/>
        <android.support.v7.preference.Preference
            android:key="hiddenReservations"
            android:title="@string/hidden_reservations"
            android:summary="@string/hidden_reservations_desc">
            <intent
                android:action="android.intent.action.VIEW"
                android:targetPackage="com.seamk.mobile"
                android:targetClass="com.seamk.mobile.extras.ActivityHiddenReservations"
                />
        </android.support.v7.preference.Preference>
        -->
    </androidx.preference.PreferenceCategory>
<!--
    <android.support.v7.preference.PreferenceCategory
        android:title="Tiivistelmä">
        <android.support.v7.preference.SwitchPreferenceCompat
            android:key="hidePastDays"
            android:title="Piilota menneet päivät"
            android:summary="Älä näytä menneitä päiviä tiivistelmässä"
            android:defaultValue="true"/>
        <android.support.v7.preference.SwitchPreferenceCompat
            android:key="saveTimetableOffline"
            android:title="Tallenna lukujärjestys"
            android:summary="Tallenna tiivistelmän lukujärjestys"
            android:defaultValue="false"/>
    </android.support.v7.preference.PreferenceCategory>
-->
    <androidx.preference.PreferenceCategory
        android:title="@string/timetable">
        <androidx.preference.SwitchPreferenceCompat
            android:key="showSchedulingGroups"
            android:title="@string/show_scheduling_groups"
            android:summary="@string/show_scheduling_groups_desc"
            android:defaultValue="true"/>
        <androidx.preference.SwitchPreferenceCompat
            android:key="useAlternativeLocation"
            android:title="@string/use_alternativeLocation"
            android:summary="@string/use_alternativeLocation_desc"
            android:defaultValue="false"/>
        <!--
        <android.support.v7.preference.SwitchPreferenceCompat
            android:key="showWeekends"
            android:title="Näytä viikonloput"
            android:summary="Näytä lauantait ja sunnuntait"
            android:defaultValue="true"/>
        <android.support.v7.preference.SwitchPreferenceCompat
            android:key="showEmptyDays"
            android:title="Näytä varauksettomat päivät"
            android:summary="Näytä päivät joille ei ole tunteja"
            android:defaultValue="true"/>
            -->
    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        android:title="Muut">
        <androidx.preference.SwitchPreferenceCompat
            android:key="showAdverts"
            android:title="@string/show_adverts"
            android:summary="@string/show_adverts_desc"
            android:defaultValue="true"/>
    </androidx.preference.PreferenceCategory>

</androidx.preference.PreferenceScreen>