<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:fitsSystemWindows="true"
        android:textAlignment="center"
        android:minHeight="?attr/actionBarSize"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:background="?attr/colorPrimary"/>

    <LinearLayout
        android:padding="4dp"
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/ll_search">

        <androidx.appcompat.widget.AppCompatImageView
            android:padding="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_search"/>

        <EditText
            android:id="@+id/et_search"
            android:layout_width="match_parent"
            android:imeActionId="666"
            android:imeActionLabel="Search"
            android:singleLine="true"
            android:imeOptions="actionSearch"
            android:padding="4dp"
            android:layout_height="40dp"
            android:hint="@string/write_search_word"/>
    </LinearLayout>


    <TableLayout
        android:id="@+id/tablelayout"
        android:layout_below="@id/ll_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:shrinkColumns="*"
        android:stretchColumns="*"
        android:layout_gravity="center"
        android:measureWithLargestChild="true"
        android:padding="4dp">
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">
            <TextView
                android:text="@string/type"
                android:maxLines="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:padding="8dp"/>
            <RadioGroup
                android:id="@+id/rg_type_of_search"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_span="1">
                <RadioButton
                    android:layout_marginEnd="5dp"
                    android:id="@+id/RBStudent"
                    android:maxLines="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/student"/>
                <RadioButton
                    android:layout_marginEnd="5dp"
                    android:id="@+id/RBTeacher"
                    android:maxLines="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/teacher"/>
                <RadioButton
                    android:layout_marginEnd="5dp"
                    android:id="@+id/RBRealization"
                    android:maxLines="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/realization"/>
            </RadioGroup>
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/b_search"
        android:layout_below="@id/tablelayout"
        android:padding="4dp"
        android:text="@string/search"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_below="@id/b_search"
        android:id="@+id/rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ebebeb"
        android:scrollbars="vertical" />

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/b_search"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:indeterminate="true"
        android:visibility="gone" />

    <TextView
        android:id="@+id/empty_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/b_search"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textSize="16sp"
        android:text="@string/no_search_results"
        android:visibility="gone" />

    <TextView
        android:id="@+id/first_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/b_search"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textSize="16sp"
        android:text="@string/study_basket_search_help"
        android:visibility="visible" />

</RelativeLayout>