<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:id="@+id/frame_layout_root"
    android:background="@color/colorPrimary"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/LL_top_items"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">
        <TextView
            android:textAlignment="center"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setup_summary"
            android:textColor="@android:color/white"/>
        <TextView
            android:padding="30dp"
            android:textSize="16sp"
            android:textAlignment="center"
            style="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setup_third_desc"
            android:textColor="@android:color/white"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:shrinkColumns="*"
            android:stretchColumns="*"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:measureWithLargestChild="true">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">
                <TextView
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:text="@string/group_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/overview_studentgroup"
                    android:textSize="18sp"
                    android:textColor="@android:color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <Button
                    android:id="@+id/b_muuta_ryhma"
                    android:text="@string/setup_change"
                    android:textSize="16sp"
                    android:textColor="@android:color/white"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1">
            <TextView
                android:textSize="18sp"
                android:text="@string/restaurant"
                android:textColor="@android:color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/overview_restaurant"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/b_muuta_ravintola"
                android:text="@string/setup_change"
                android:textSize="16sp"
                android:textColor="@android:color/white"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>
        </TableLayout>

        <android.support.v7.widget.AppCompatCheckBox
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            android:id="@+id/check_box_study_basket"
            app:buttonTint="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/forward_study_basket" />

        <Button
            android:id="@+id/button_close_intro"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:gravity="center"
            android:elevation="4dp"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:layout_marginTop="80dp"
            android:text="@string/setup_accept"
            android:textColor="@android:color/white" />
    </LinearLayout>
</FrameLayout>