<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:id="@+id/frame_layout_root"
    android:background="@color/colorPrimary"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/LL_top_items"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/setup_second_title"
            android:textAlignment="center"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_time_setup_literal"
            android:textColor="@android:color/white"/>

        <TextView
            android:id="@+id/desc_text"
            android:padding="10dp"
            android:textSize="16sp"
            android:textAlignment="center"
            style="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TEKSTI"
            android:textColor="@android:color/white"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/rb_student"
                android:textSize="14sp"
                app:buttonTint="@android:color/white"
                android:textColor="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/student"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"/>

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/rb_teacher"
                android:textSize="14sp"
                android:layout_width="match_parent"
                app:buttonTint="@android:color/white"
                android:textColor="@android:color/white"
                android:layout_height="wrap_content"
                android:text="@string/teacher"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"/>

        </RadioGroup>

    <LinearLayout
        android:visibility="visible"
        android:id="@+id/linear_layout_setup_manual"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:gravity="center"
        android:orientation="vertical">

            <EditText
                android:id="@+id/edit_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZÄÖabcdefghijklmnopqrstuvwxyzäö1234567890"
                android:hint="@string/write_code_name"
                android:textColorHint="#dddddd"
                android:imeOptions="actionDone"
                android:inputType="textNoSuggestions"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:enabled="false"/>

            <Button
                android:id="@+id/button_save_student_group"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:gravity="center"
                android:text="@string/save"
                android:enabled="false"
                android:textColor="@android:color/white" />

    </LinearLayout>

        <android.support.v7.widget.RecyclerView
        android:visibility="gone"
        android:id="@+id/rv"
        android:background="#eeeeee"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="60dp">
    </android.support.v7.widget.RecyclerView>

        <ProgressBar
            android:id="@+id/progressbar"
            android:padding="100dp"
            android:indeterminate="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"/>

        <Button
            android:visibility="gone"
            android:layout_gravity="center"
            android:id="@+id/button_retry"
            android:layout_margin="80dp"
            android:textSize="14sp"
            android:textColor="@android:color/white"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/try_again"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/linear_layout_setup_swipe"
            android:layout_marginTop="36dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/section_img2"
                android:src="@drawable/image_swipe_left"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter" />

            <TextView
                android:padding="10dp"
                android:textSize="16sp"
                android:textAlignment="center"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_time_setup_swipe_left"
                android:textColor="@android:color/white"/>

        </LinearLayout>

    </LinearLayout>
</FrameLayout>